--- a/datatags-app/app/views/interview/intro.scala.html
+++ b/datatags-app/app/views/interview/intro.scala.html
@@ -1,5 +1,5 @@
-@( fcs:edu.harvard.iq.datatags.model.charts.FlowChartSet,
-   tlt:edu.harvard.iq.datatags.model.types.CompoundType,
+@( fcs:edu.harvard.iq.datatags.model.graphs.DecisionGraph,
+   tlt:edu.harvard.iq.datatags.model.types.CompoundSlot,
    greeting: Option[String] )
 @scripts = {
     <script type="text/javascript" src="@routes.Assets.at("js/InterviewIntro.js")"></script>
