--- a/datatags-app/app/views/interview/rejected.scala.html
+++ b/datatags-app/app/views/interview/rejected.scala.html
@@ -1,6 +1,7 @@
 @( questionnaireId: String,
    reason: String,
    requestedInterview: Option[RequestedInterviewSession],
+   serializer:Serialization,
    answerHistory: Seq[AnswerRecord] )
 
 @templates.bsNavBar("Dataset Rejected", 'tag) {
@@ -24,7 +25,7 @@
                         <h3 class="panel-title">Answer History</h3>
                       </div>
                       <div class="panel-body">
-                        @comps.answerHistory(answerHistory, questionnaireId, false)
+                        @comps.answerHistory(answerHistory, questionnaireId, false, serializer)
                       </div>
               </div></div></div>
 
@@ -32,9 +33,9 @@
                   case Some(interview) => {
                       <div class="center-block" style="text-align: center">
                         <p> Click the button below to return to your data repository with the reason your dataset can not be accepted. </p>
-                          @helper.form( action = routes.RequestedInterview.unacceptableDataset(interview.key, reason)) {
-                            <button class="btn btn-primary" type="submit">Continue depositing your data</button>
-                          }
+                          <form action="@routes.RequestedInterview.unacceptableDataset(interview.key, reason)" method="POST">
+                            <button class="btn btn-primary" type="submit">Back to Data Repository</button>
+                          </form>
                       </div>
                   }
                   case None => {
