--- a/datatags-app/app/views/questionnaireCatalog.scala.html
+++ b/datatags-app/app/views/questionnaireCatalog.scala.html
@@ -6,8 +6,8 @@
             <div class="col-md-12">
                 <h1>Available Questionnaires</h1>
                 <p>Below is a list of available questionnaires. Please select one to begin the tagging process.
-                    <div class="note note-todo">Currently there's only one. We will have more, plus an upload option soon.</div>
                 </p>
+                <div class="note note-todo">Currently there's only one. Future versions will have more, plus an upload option.</div>
                 <table class="table table-striped">
                     @for( p <- charts ) {
                         <tr><td><a href="@routes.Interview.interviewIntro(p._2)">@p._1</a></td></tr>
