better looking tag- and value-tree (better css and DOM structure too)

--- a/datatags-app/app/assets/css/tags.less
+++ b/datatags-app/app/assets/css/tags.less
@@ -29,7 +29,7 @@
     border-bottom: @tagHeight/2 transparent solid;
     border-right: @triangleHeight blue solid;
     border-top: @tagHeight/2 transparent solid;
-    border-left: 0px transparent solid;
+    border-left: 0 transparent solid;
     content: '';
     position: absolute;
     width: 0;
