--- a/datatags-app/app/views/index.scala.html
+++ b/datatags-app/app/views/index.scala.html
@@ -22,8 +22,19 @@
     </h3>
     <p>
       <strong>DataTags</strong> is a prototype tool that helps researchers understand the laws and contractual agreements that govern how they can share sensitive data.
+        <br/>
+        It may also be used to model certain types of public policies.
     </p>
   </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="text-center">
+                <a href="@startTaggingUrl" class="btn btn-primary btn-lg">
+                    Try the DataTags Demo
+                </a>
+            </div>
+        </div>
+    </div>
 
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
