--- a/datatags-app/app/views/interview/rejected.scala.html
+++ b/datatags-app/app/views/interview/rejected.scala.html
@@ -40,7 +40,8 @@
                   }
                   case None => {
                       <div class="note note-todo">
-                        Here endeth the demo. Future versions will redirect you to Dataverse (or another secure data repo), with the tags.
+                        Here endeth the demo. If the interview was requested by an external system (e.g. Dataverse or another data repository),
+                          that external system will receive the tags and you'll be redirected there.
                       </div>
                       <div class="col-md-2 col-md-offset-5">
                         <a href="@routes.Application.index" class="btn btn-primary">Start again</a>    
