--- a/datatags-app/app/assets/css/main.less
+++ b/datatags-app/app/assets/css/main.less
@@ -146,28 +146,25 @@ table.engine-trace {
 
 @bkgColor: rgba(255,255,255,.25);
 
-.tagtype-container, .tagvalue-container {
-  background-color: #AAA;
+.tagtype-container {
   color: #BBB;
 }
 .tagtype-container > .tagtype-compound > .typeValues {
   margin: 0 .3em;
 }
-.tagtype-container > .tagtype-compound > div > .typeName, .tagvalue-container > .value-compound > div.typeName {
-  font-size: 24px;
-  color: white;
-  margin-left: .3em;
+.tagtype-container > .tagtype-compound {
+  background-color: #CCCCB8;
 }
 .tagtype, .value {
   background-color: @bkgColor;
   padding: 0.25em;
-  line-height: 2.6em;
-  margin: 2px;
+  margin: 4px 2px;
   border-radius: 4px;
-  border: 1px solid rgba(255,255,255,0.25);
+  box-shadow: 0 2px 6px rgba(0,0,0,.4), 0 4px 5px rgba(255,255,255,0.5) inset;
+
   .typeName {
     color: #000;
-    margin-left: 0.6em;
+    margin: 0.2em 0 0.2em 0.3em;
   }
   .typeValues, .value {
     .popover-content {
@@ -180,7 +177,6 @@ table.engine-trace {
   .valueAtom {
     border-radius: 0.5em;
     padding: 3px 0.6em;
-    margin-right: 3px;
     font-size: 0.9em;
     color: black;
     display: inline-block;
@@ -188,6 +184,7 @@ table.engine-trace {
     margin: 2px;
     border: 1px solid rgba(0,0,0,0.4);
     white-space: nowrap;
+    box-shadow: 0 1px 4px rgba(0,0,0,0.25)
   }
 }
 .tagtype-simple, .value-simple {
@@ -202,16 +199,31 @@ table.engine-trace {
 }
 .tagtype-aggregate, .value-aggregate {
   .valueAtom {
-    background-color: #ffaa88;
+    background-color: #82d194;
   }
-} 
-.tagtype-compound, .value-compound {
-  .typeValues, .value-compound > .value-compound, .value-compound > .value-simple, .atomValue {
-    margin: 0 1.6em;
-  }
-  border-bottom: none;
 }
 
+.tagvalue-container {
+  ul {
+    list-style: none;
+    li {
+
+    }
+  }
+  .typeName {
+    display: inline-block;
+  }
+  .value {
+    box-shadow: none;
+    border: 1px solid rgba(0,0,0,0.75);
+  }
+  .valueAtom {
+    box-shadow: none;
+  }
+}
+.tagvalue-container > .value {
+  background-color: #2bc1e9;
+}
 footer {
   margin-top: 2em;
   padding: 1em 0;
