--- a/datatags-app/app/assets/css/main.less
+++ b/datatags-app/app/assets/css/main.less
@@ -3,7 +3,7 @@ body {
   background-color: @bodyBackground;
 }
 
-h3 {
+h1, h2, h3 {
   color: @dataTagsBlue;
   text-shadow: 0 1px 1px rgba(0,0,0,0.25);
 }
