--- a/datatags-app/app/views/interview/rejected.scala.html
+++ b/datatags-app/app/views/interview/rejected.scala.html
@@ -1,7 +1,6 @@
-@( questionnaireId: String,
+@( qKit: QuestionnaireKit,
    reason: String,
    requestedInterview: Option[RequestedInterviewSession],
-   serializer:Serialization,
    answerHistory: Seq[AnswerRecord] )
 
 @templates.bsNavBar("Dataset Rejected", 'tag) {
@@ -9,11 +8,10 @@
     <div class="col-md-12">
         <div class="panel panel-danger">
             <div class="panel-heading">
-                <h3 class="panel-title">Dataset Cannot be Accepted</h3>
+                <h3 class="panel-title">@comps.msg(qKit, "rejection.title", reason)</h3>
             </div>
             <div class="panel-body">
-                We apologize, but we cannot accept the dataset. Reason:
-                @reason
+                @comps.msg(qKit, "rejection.reason", reason)
             </div>
           </div>
         </div>
@@ -25,7 +23,7 @@
                         <h3 class="panel-title">Answer History</h3>
                       </div>
                       <div class="panel-body">
-                        @comps.answerHistory(answerHistory, questionnaireId, false, serializer)
+                        @comps.answerHistory(answerHistory, qKit.id, false, qKit.serializer)
                       </div>
               </div></div></div>
 
