--- a/datatags-app/app/views/templates/bsBase.scala.html
+++ b/datatags-app/app/views/templates/bsBase.scala.html
@@ -24,7 +24,7 @@
 	  <link href="@routes.Assets.at("css/tags.min.css")" rel="stylesheet">
     <link rel="icon" type="image/png" href="/assets/images/favicon.png" />
 	   @extraHead
-    @comps.analytics()
+    @*@comps.analytics()*@
   </head>
   <body>
   <a href="#content" class="sr-only">Skip to main content</a>
@@ -44,7 +44,7 @@
         <li><a data-toggle="tooltip" data-placement="top" title="National Science Foundation" href="http://nsf.gov" target="_blank"><img src="/assets/images/nsf-logo-small.png" alt="NSF logo" /></a></li>
         <li><a data-toggle="tooltip" data-placement="top" title="The Dataverse Project" href="http://thedata.org" target="_blank"><img src="/assets/images/dvn-logo-small.png" alt="Dataverse logo" /></a></li>
         <li><a data-toggle="tooltip" data-placement="top" title="Data Privacy Lab, IQSS at Harvard University" href="http://dataprivacylab.org/" target="_blank"><img src="/assets/images/dpl-logo-small.png" alt="Data Privacy Lab logo" /></a></li>
-        <li><a data-toggle="tooltip" data-placement="top" title="Berkman Center for Internet and Society at Harvard University" href="http://cyber.law.harvard.edu/" target="_blank"><img src="/assets/images/berkman-logo-small.png" alt="Berkman Center logo" /></a></li>
+        @*<li><a data-toggle="tooltip" data-placement="top" title="Berkman Center for Internet and Society at Harvard University" href="http://cyber.law.harvard.edu/" target="_blank"><img src="/assets/images/berkman-logo-small.png" alt="Berkman Center logo" /></a></li>*@
         <li><a data-toggle="tooltip" data-placement="top" title="Privacy Tools for Sharing Research Data, at Harvard School of Engineering and Applied Sciences" href="http://privacytools.seas.harvard.edu" target="_blank"><img src="/assets/images/seas-logo-small.png" alt="Harvard SEAS logo" /></a></li>
         <li><a data-toggle="tooltip" data-placement="top" title="The Institute for Quantitative Social Science at Harvard University" href="http://iq.harvard.edu" target="_blank"><img src="/assets/images/iqss-logo-small.png" alt="IQSS logo" /></a></li>
       </ul>
@@ -59,6 +59,5 @@
       $("span[data-toggle='tooltip']").tooltip(); 
     } );
   </script>
-  @comps.crazyEgg()  
   </body>
 </html>
