--- a/datatags-app/app/views/templates/bsNavBar.scala.html
+++ b/datatags-app/app/views/templates/bsNavBar.scala.html
@@ -33,7 +33,7 @@
       </ul>
       
       <ul class="nav navbar-nav navbar-right">
-        <li><a data-toggle="tooltip" data-placement="bottom" href="http://datascience.iq.harvard.edu/datatags" target="_blank" title="Project's home"><i class="fa fa-home"></i></a></li>
+        <li><a data-toggle="tooltip" data-placement="bottom" href="http://datatags.org" target="_blank" title="Project's home"><i class="fa fa-home"></i></a></li>
         <li><a data-toggle="tooltip" data-placement="bottom" href="https://github.com/IQSS/DataTags/" title="We're open source! Visit us at GitHub" target="_blank"><i class="fa fa-github-alt"></i></a></li>
         <li><a data-toggle="tooltip" data-placement="bottom" href="http://iq.harvard.edu" title="Institute of Quantitative Social Science" target="_blank">IQSS</a></li>
       </ul>
