Added support for multi-interview

--- a/datatags-app/app/views/index.scala.html
+++ b/datatags-app/app/views/index.scala.html
@@ -19,11 +19,8 @@
     <div class="col-md-8 col-md-offset-2">
       <div class="page-header">
         <img src="/assets/images/DataTags-Logo-large.png" alt="DataTags logo" />
-        <h3>
-          Share sensitive data with confidence
-        </h3>
         <p>
-          <strong>DataTags</strong>
+          <strong>Policy Models</strong><sup>working title</sup>
           is a prototype tool that helps researchers understand the laws and contractual agreements that govern how they can share sensitive data.
           <br/>
           It may also be used to model certain types of public policies.
@@ -35,7 +32,7 @@
     <div class="col-md-12">
       <div class="text-center">
         <a href="@startTaggingUrl" class="btn btn-primary btn-lg">
-          Try the DataTags Demo
+          Try an Interview
         </a>
       </div>
     </div>
@@ -155,7 +152,7 @@
       </p>
       <div style="text-align: center">
         <a href="@startTaggingUrl" class="btn btn-primary btn-lg">
-          Try the DataTags Demo
+          Try an Interview
         </a>
       </div>
       <h3>Research</h3>
