--- a/datatags-app/app/views/questionnaireCatalog.scala.html
+++ b/datatags-app/app/views/questionnaireCatalog.scala.html
@@ -1,16 +1,21 @@
-@( charts:Seq[(String,String)] )
+@( kits:Map[String,QuestionnaireKit] )
 
 @templates.bsNavBar("DataTags Questionnaire Catalog", 'tag){
     <div class="container" id="content">
         <div class="row">
             <div class="col-md-12">
                 <h1>Available Questionnaires</h1>
-                <p>Below is a list of available questionnaires. Please select one to begin the tagging process.
+                <p>
+                  Click a policy model from the list to start its interview.
                 </p>
-                <div class="note note-todo">Currently there's only one. Future versions will have more, plus an upload option.</div>
                 <table class="table table-striped">
-                    @for( p <- charts ) {
-                        <tr><td><a href="@routes.Interview.interviewIntro(p._2)">@p._1</a></td></tr>
+                    @for( k <- kits.values.toSeq.sortBy(_.title) ) {
+                        <ul class="list-unstyled"><li>
+                          <h4><a href="@routes.Interview.interviewIntro(k.id)">@k.title</a></h4>
+                          @for( m <- k.messages.get("subtitle")){
+                            <p>@m</p>
+                          }
+                        </li></ul>
                     }
                 </table>
             </div>
