--- a/datatags-app/app/views/interview/intro.scala.html
+++ b/datatags-app/app/views/interview/intro.scala.html
@@ -6,7 +6,7 @@
 }
 @templates.bsNavBar("Interview Start Page", 'tag, scripts) {
   <div class="row">
-    <div class="md-col-12">
+    <div class="col-md-8 col-md-offset-2">
     @for( welcome <- title ){
       <h3>@welcome</h3>
     }
