--- a/datatags-app/app/views/templates/bsNavBar.scala.html
+++ b/datatags-app/app/views/templates/bsNavBar.scala.html
@@ -16,8 +16,8 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="/">
-        <img src="@routes.Assets.at("images/DataTags-Logo-mid.png")" alt="DataTags logo"/>
-        DataTags
+        @*<img src="@routes.Assets.at("images/DataTags-Logo-mid.png")" alt="DataTags logo"/>*@
+        PolicyModels
       </a>
     </div>
 
