--- a/datatags-app/app/views/interview/accepted.scala.html
+++ b/datatags-app/app/views/interview/accepted.scala.html
@@ -42,7 +42,7 @@
               <div class="text-right">
                 <br />
                 <a href="@routes.Interview.downloadTags" class="btn btn-primary">
-                  <i class="fa fa-download"></i>&nbsp;Download Tags
+                  <i class="fa fa-download"></i>&nbsp;Download Policy as JSON
                 </a>
               </div>
           </div>
@@ -64,7 +64,7 @@
           <div class="center-block" style="text-align: center">
             <p> Click the button below to return to your data repository with these tags. </p>
               <form action="@routes.RequestedInterview.postBackTo(interview.key)" method="POST">
-                <button class="btn btn-primary" type="submit">Continue depositing your data</button>
+                <button class="btn btn-primary" type="submit">@interview.returnButtonTitle</button>
               </form>
           </div>
       }
