--- a/datatags-app/app/views/templates/bsBase.scala.html
+++ b/datatags-app/app/views/templates/bsBase.scala.html
@@ -40,7 +40,7 @@
       <br>
       <br>
       <ul class="list-inline">
-        <li>DataTags project. &copy; 2013 by the President and Fellows of Harvard College.</li>
+        <li>PolicyModels/DataTags project. &copy; 2017 by the President and Fellows of Harvard College.</li>
         <li><a data-toggle="tooltip" data-placement="top" title="National Science Foundation" href="http://nsf.gov" target="_blank"><img src="/assets/images/nsf-logo-small.png" alt="NSF logo" /></a></li>
         <li><a data-toggle="tooltip" data-placement="top" title="The Dataverse Project" href="http://thedata.org" target="_blank"><img src="/assets/images/dvn-logo-small.png" alt="Dataverse logo" /></a></li>
         <li><a data-toggle="tooltip" data-placement="top" title="Data Privacy Lab, IQSS at Harvard University" href="http://dataprivacylab.org/" target="_blank"><img src="/assets/images/dpl-logo-small.png" alt="Data Privacy Lab logo" /></a></li>
