--- a/datatags-app/app/views/templates/bsNavBar.scala.html
+++ b/datatags-app/app/views/templates/bsNavBar.scala.html
@@ -6,7 +6,7 @@
 }
 
 @bsBase(title, scripts, headPart) {
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
